// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`#DefaultRenderer should render DefaultRenderer with a advanced tooltip 1`] = `
<DefaultValueRenderer
  contentRenderer={[Function]}
/>
`;

exports[`#DefaultRenderer should render DefaultRenderer with a label tooltip 1`] = `
<DefaultValueRenderer
  label="loreum"
/>
`;
